--- a/mingw32_gcc99/10_rsa_encryption_binary_file/readme.adoc
+++ b/mingw32_gcc99/10_rsa_encryption_binary_file/readme.adoc
@@ -220,3 +220,21 @@ For any issues or questions, please refer to the documentation of the tools used
 
 
 This README  file provides an overview of the project, instructions for building, running, and cleaning the programs, and also mentions how to adjust the compiler path if needed. You can add more details or tailor it further to your specific project requirements.
+
+[[license]]
+== License
+
+MIT License
+
+Copyright (c) 2023 Jayakumar Sengottuvel
+
+== Author
+
+- [Jayakumar Sengottuvel] (https://github.com/JSengottuvel)
+
+=== Contact
+
+If you have any questions or feedback, please feel free to contact us at [code@jayakumar.de](mailto:code@jayakumar.de).
+
+Happy Coding!
+
